# mart-products

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
Imtiaz_mart/online_imtiaz_mart/: Dockerfile  next.config.mjs  package-lock.json  package.json
Imtiaz_mart/online_imtiaz_mart/Utils/: Auth.js
Imtiaz_mart/online_imtiaz_mart/app/: layout.js  page.js
Imtiaz_mart/online_imtiaz_mart/app/(admin)/adminlogin/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(admin)/login/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(admin)/register/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(backend)/dashboard/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(product_detail)/addproduct/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(product_detail)/prodCategory/[name]/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(product_detail)/product/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(product_detail)/productShow/[id]/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/(product_detail)/updateProduct/: page.jsx
Imtiaz_mart/online_imtiaz_mart/app/Components/: CartDetail.jsx  Navbar.jsx  OrderDetail.jsx  Slidebar.jsx
app/: books.py  database.py  main.py  models.py  pyproject.toml
app/TodoApp/: database.py  main.py
app/TodoApp/routers/: auth.py  todos.py
app/router/: item.py
auth/: .env  Dockerfile  pyproject.toml
auth/auth/: auth_security.py  database.py  main.py  model.py
auth/auth/router/: item.py
online_imtiaz_mart/: package-lock.json  package.json
online_imtiaz_mart/src/app/: layout.js  page.js
online_imtiaz_mart/src/app/AddProduct/: page.js
online_imtiaz_mart/src/app/BuyerFrom/: page.js
online_imtiaz_mart/src/app/Component/: CartDetail.js  OrderDetails.js  ProductCart.js  SignUpForm.js  UpdateProductModal.js
online_imtiaz_mart/src/app/Products/: page.js
online_imtiaz_mart/src/app/SignUpForm/: page.js
online_imtiaz_mart/src/app/UserDashboard/: page.js
online_imtiaz_mart/src/app/UserRegister/: page.js
order/: .env  Dockerfile  pyproject.toml
order/order/: database.py  main.py  model.py
order/order/router/: item.py
product/: .env  Dockerfile  pyproject.toml
product/product/: database.py  main.py  model.py
product/product/router/: item.py
user/: .dockerignore  .env  Dockerfile  pyproject.toml
user/user/: main.py  model.py
user/user/router/: item.py
