[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Farhan Shaukat Ali <farhanshokat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
