[tool.poetry]
name = "product"
version = "0.1.0"
description = ""
authors = ["Muhammad Aqeel <104295133+Aqeel785@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
python-jose = "^3.3.0"
supabase = "^2.5.2"
psycopg2 = "^2.9.9"
confluent-kafka = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
