[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["Muhammad Aqeel <104295133+Aqeel785@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlmodel = "^0.0.21"
psycopg2 = "^2.9.9"
supabase = "^2.5.3"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
confluent-kafka = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
